--- a/.azure-pipelines/azure-pipelines-osx.yml
+++ b/.azure-pipelines/azure-pipelines-osx.yml
@@ -5,33 +5,41 @@
 jobs:
 - job: osx
   pool:
-    vmImage: macOS-15
+    vmImage: $(VMIMAGE)
   strategy:
     matrix:
       osx_64_python3.11:
         CONFIG: osx_64_python3.11
         UPLOAD_PACKAGES: 'True'
+        VMIMAGE: macOS-15
       osx_64_python3.12:
         CONFIG: osx_64_python3.12
         UPLOAD_PACKAGES: 'True'
+        VMIMAGE: macOS-15
       osx_64_python3.13:
         CONFIG: osx_64_python3.13
         UPLOAD_PACKAGES: 'True'
+        VMIMAGE: macOS-15
       osx_64_python3.14:
         CONFIG: osx_64_python3.14
         UPLOAD_PACKAGES: 'True'
+        VMIMAGE: macOS-15
       osx_arm64_python3.11:
         CONFIG: osx_arm64_python3.11
         UPLOAD_PACKAGES: 'True'
+        VMIMAGE: macOS-15
       osx_arm64_python3.12:
         CONFIG: osx_arm64_python3.12
         UPLOAD_PACKAGES: 'True'
+        VMIMAGE: macOS-15
       osx_arm64_python3.13:
         CONFIG: osx_arm64_python3.13
         UPLOAD_PACKAGES: 'True'
+        VMIMAGE: macOS-15
       osx_arm64_python3.14:
         CONFIG: osx_arm64_python3.14
         UPLOAD_PACKAGES: 'True'
+        VMIMAGE: macOS-15
   timeoutInMinutes: 360
   variables: {}
 
